components/java-quarkus-with-env/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: purple-mermaid-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: java-quarkus-with-env
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eljava-quarkus-with-env
  namespace: karthik-jk
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-java-quarkus-with-env
    weight: null
status: {}
